# FortranFinance

./: .gitignore  README.md  clean.sh  cloc.sh  makefile  setup.R  setup.mk
MRFFL/: CMakeLists.txt  Doxyfile  README.md  include.mk  makefile  mrffl_bitset.f90  mrffl_cashflows.f90  mrffl_config.f90  mrffl_life_table.f90  mrffl_percentages.f90  mrffl_prt_sets.f90  mrffl_solver.f90  mrffl_solver_ne.f90  mrffl_stats.f90  mrffl_tvm.f90  mrffl_tvm12.f90  mrffl_us_inflation.f90  mrffl_us_markets.f90  mrffl_us_taxes.f90  mrffl_var_sets.f90  publish_doxygen.sh  tools_flang.mk  tools_gfortran.mk  tools_ifx.mk  tools_lfortran.mk  tools_nvfortran.mk
MRFFL/doxygen/: Doxyfile  README.md  makefile
MRFFL/functional_tests/: README.md  ftest_life_table_print.R  ftest_life_table_print.f90  ftest_markets.f90  ftest_random_walk.R  ftest_random_walk.f90  ftest_stats.R  ftest_stats.f90  ftest_stats_bmark.f90  makefile
MRFFL/make_includes/: README.md  include.mk  tools_flang.mk
MRFFL/src/: README.md  include.mk  makefile  mrffl_bitset.f90  mrffl_cashflows.f90  mrffl_config.f90  mrffl_life_table.f90  mrffl_percentages.f90  mrffl_prt_sets.f90  mrffl_solver.f90  mrffl_solver_ne.f90  mrffl_stats.f90  mrffl_tvm.f90  mrffl_tvm12.f90  mrffl_us_inflation.f90  mrffl_us_markets.f90  mrffl_us_taxes.f90  mrffl_var_sets.f90
MRFFL/unit_tests/: README.md  makefile  utest_inflation.f90  utest_inflation.good  utest_life_table.f90  utest_life_table.good  utest_life_table_print.f90  utest_life_table_print.good  utest_percentages.f90  utest_stats_probit.f90  utest_taxes.f90  utest_tvm12.f90  utest_tvm12.good  utest_tvm_cashflows.f90  utest_tvm_cashflows.good  utest_tvm_delayed_arithmetic_annuity_solve.f90  utest_tvm_delayed_arithmetic_annuity_solve.good  utest_tvm_delayed_geometric_annuity_solve.f90  utest_tvm_delayed_geometric_annuity_solve.good  utest_tvm_delayed_level_annuity_solve.f90  utest_tvm_delayed_level_annuity_solve.good  utest_tvm_delayed_lump_sum_solve.f90  utest_tvm_lump_sum_solve.f90
MRFFL_functional_tests/: README.md  ftest_life_table_print.f90  makefile  test_life_table_print.R  test_life_table_print.f90  test_markets.f90  test_stats.R  test_stats.f90
MRFFL_unit_tests/: makefile  test_inflation.f90  test_life_table.f90  test_life_table.good  test_life_table_print.f90  test_life_table_print.good  test_percentages.good  test_stats_probit.good  test_taxes.f90  test_taxes.good  test_tvm12.f90  test_tvm12.good  test_tvm_cashflows.good  test_tvm_delayed_geometric_annuity_solve.f90  test_tvm_delayed_geometric_annuity_solve.good  test_tvm_delayed_level_annuity_solve.f90  test_tvm_delayed_level_annuity_solve.good  test_tvm_delayed_lump_sum_solve.f90  test_tvm_delayed_lump_sum_solve.good  test_tvm_lump_sum_solve.f90  test_tvm_lump_sum_solve.good  utest_life_table_print.f90  utest_percentages.f90  utest_stats_probit.f90  utest_tvm_delayed_arithmetic_annuity_solve.good  utest_tvm_delayed_lump_sum_solve.good
cashflows/: CMakeLists.txt  README.md  cashflow_vs_tvm_solver.f90  irr.f90  makefile
docs/: changelog.html  changelog.org  index.html  index.org
docs/MRFFL/: index.html  index.org
docs/loans/: index.html  index.org
docs/monte_carlo/: index.html  index.org  pics.sh
docs/retirement_simulation/: index.html  index.org  makefile  pics.sh
loans/: README.md  loan_geometric_payments.f90  loan_level_payments.f90  loan_up_down_payments  loan_up_down_payments.f90  makefile
monte_carlo/: README.md  blend_risk.R  blend_risk.f90  blend_risk_cvuc.R  inflation.R  inflation.f90  makefile  stocks.R  stocks.f90
retirement/: README.md  makefile  retire_cashflow.f90  roth_conversion.f90
retirement_simulation/: README.md  config_20.nml  config_60.nml  life_config.nml  makefile  retire.R  retire.f90
scripts/: cloc.sh  make_clean.sh
setup_fortran_gmake/: setup_fortran.mk  tools_flang.mk  tools_gfortran.mk  tools_ifx.mk  tools_lfortran.mk  tools_nvfortran.mk
